# bassist

./: .env.example  .gitignore  CONTRIBUTING.md  README.md  pyproject.toml  run_assistant.ps1  start.bat  start.sh
src/: app.py  config.py
src/core/: __init__.py  assistant.py  models.py
src/memory/: __init__.py  consolidator.py  store.py
src/speech/: __init__.py  transcribe.py
src/tools/: __init__.py  commands.py  file_reader.py  google_docs.py  google_drive.py  notes.py  travel.py  weather.py  web.py
src/transport/: __init__.py  discord_bot.py  telegram_bot.py
